<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/horizontal_margin"
    android:layout_marginVertical="@dimen/vertical_margin">
    <TextView
        android:id="@+id/sws_reqtest_stellar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stellar"
        android:labelFor="@id/sws_reqtest_stellar"/>
    <EditText
        android:id="@+id/sws_reqtest_stellar"
        android:layout_below="@id/sws_reqtest_stellar_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="textUri"/>
    <TextView
        android:id="@+id/sws_reqtest_path_label"
        android:layout_below="@id/sws_reqtest_stellar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/req_path"
        android:labelFor="@id/sws_reqtest_path"/>
    <EditText
        android:id="@+id/sws_reqtest_path"
        android:layout_below="@id/sws_reqtest_path_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"/>
    <TextView
        android:id="@+id/sws_reqtest_params_label"
        android:layout_below="@id/sws_reqtest_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/req_param"
        android:labelFor="@id/sws_reqtest_params"/>
    <ScrollView
        android:id="@+id/sws_reqtest_params"
        android:layout_below="@id/sws_reqtest_params_label"
        android:layout_above="@id/sws_reqtest_send_split"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/sws_reqtest_params_inside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/sws_reqtest_params_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/sws_reqtest_param_add"/>
        </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/sws_reqtest_send_split"
        android:layout_above="@id/sws_reqtest_send"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <Button
        android:id="@+id/sws_reqtest_send"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sws_reqtest_send"/>

</RelativeLayout>
